--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">Admisiones</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">Vida Universitaria</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">Nuestros Laboratorios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Ex-Alumnos</a></li>
                     </ul>
                 </div>
             </div>
@@ -39,9 +39,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome To Our Studio!</div>
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+                <div class="masthead-subheading">Ibero</div>
+                <div class="masthead-heading text-uppercase">Mecatrónica</div>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Explora la carrera</a>
             </div>
         </header>
         <!-- Services-->
