--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#services">Admisiones</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Vida Universitaria</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Nuestros Laboratorios</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Ex-Alumnos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Academia e Investigación</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">Instalaciones</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Empleabilidad</a></li>
                     </ul>
                 </div>
             </div>
