--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <!--CAMBIAR EL href DE CADA MENú-->>
+                        <!--CAMBIAR EL href DE CADA MENú-->
                         <li class="nav-item"><a class="nav-link" href="#services">Admisiones</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Vida Universitaria</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">Academia e Investigación</a></li>
