--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="masthead-subheading">Bienvenid@s a Ingeniería</div>
                 <div class="masthead-heading text-uppercase">Mecatrónica</div>
-                <a href="#services" class="scroll-btn">Explorar</a>
+                <a href="#services" class="btn-xl">Explorar</a>
                 <!--<a class="btn btn-primary btn-xl text-uppercase" href="#services">Explora la carrera</a>-->
             </div>
         </header>
