Cambios para la barra roja

--- a/index.html
+++ b/index.html
@@ -37,18 +37,19 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead">
-            <div class="container">
+        <header class="masthead" id="masthead">
+            <div class="masthead-content">
+                <div class="container">
                 <div class="masthead-subheading">Bienvenid@s a Ingeniería</div>
                 <div class="masthead-heading text-uppercase">Mecatrónica</div>
-                <!--<a class="btn btn-primary btn-xl text-uppercase" href="#services">Explora la carrera</a>-->
-            </div>
-
-            <!-- Barra roja inferior -->
-            <div class="barra-roja">
+                </div>
+                <!-- Barra roja inferior -->
+                <div class="barra-roja">
                 <a href="#services" class="scroll-btn">Explorar</a>
+                </div>
             </div>
         </header>
+
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container">
