regreso a la banda roja sin listener

--- a/index.html
+++ b/index.html
@@ -37,20 +37,18 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead" id="masthead">
+        <header class="masthead">
             <div class="container">
-                    <div class="masthead-subheading">Bienvenid@s a Ingeniería</div>
-                    <div class="masthead-heading text-uppercase">Mecatrónica</div>
+                <div class="masthead-subheading">Bienvenid@s a Ingeniería</div>
+                <div class="masthead-heading text-uppercase">Mecatrónica</div>
+                <!--<a class="btn btn-primary btn-xl text-uppercase" href="#services">Explora la carrera</a>-->
             </div>
-            <div class="masthead-content">
-                
-                <!-- Barra roja inferior -->
-                <div class="barra-roja">
-                    <a href="#services" class="scroll-btn">Explorar</a>
-                </div>
+
+            <!-- Barra roja inferior -->
+            <div class="barra-roja">
+                <a href="#services" class="scroll-btn">Explorar</a>
             </div>
         </header>
-
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container">
@@ -613,14 +611,5 @@
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-
-        <script>
-            window.addEventListener("scroll", function () {
-                const masthead = document.getElementById("masthead");
-                const scrolled = window.scrollY > 100;
-                masthead.classList.toggle("masthead-scrolled", scrolled);
-            });
-        </script>
-
     </body>
 </html>
