--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead">
-            <div class="container">
-                <div class="masthead-subheading">Bienvenid@s a Ingeniería</div>
-                <div class="masthead-heading text-uppercase">Mecatrónica</div>
-                <!--<a class="btn btn-primary btn-xl text-uppercase" href="#services">Explora la carrera</a>-->
+        <header class="masthead" id="masthead">
+            <!-- Contenido centrado (imagen + texto) -->
+            <div class="masthead-overlay">
+                <div class="container">
+                    <div class="masthead-subheading">Bienvenid@s a Ingeniería</div>
+                    <div class="masthead-heading text-uppercase">Mecatrónica</div>
+                </div>
             </div>
 
             <!-- Barra roja inferior -->
