--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
         <!-- Masthead-->
         <header class="masthead" id="masthead">
             <!-- Contenido centrado (imagen + texto) -->
-            <div class="container">
-                <div class="masthead-subheading">Bienvenid@s a Ingeniería</div>
-                <div class="masthead-heading text-uppercase">Mecatrónica</div>
+            <div class="masthead-overlay">
+                <div class="container">
+                    <div class="masthead-subheading">Bienvenid@s a Ingeniería</div>
+                    <div class="masthead-heading text-uppercase">Mecatrónica</div>
+                </div>
             </div>
 
             <!-- Barra roja inferior -->
