--- a/index.html
+++ b/index.html
@@ -613,5 +613,14 @@
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+
+        <script>
+            window.addEventListener("scroll", function () {
+                const masthead = document.getElementById("masthead");
+                const scrolled = window.scrollY > 100;
+                masthead.classList.toggle("masthead-scrolled", scrolled);
+            });
+        </script>
+
     </body>
 </html>
