--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead" id="masthead">
-            <!-- Contenido centrado (imagen + texto) -->
+            <!-- Contenido centrado -->
             <div class="masthead-overlay">
                 <div class="container">
                     <div class="masthead-subheading">Bienvenid@s a Ingeniería</div>
