--- a/empleabilidad.html
+++ b/empleabilidad.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <!-- Estilos propios -->
-  <link href="css/styles.css" rel="stylesheet">
+  <link href="assets/css/styles.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -93,6 +93,6 @@
     crossorigin="anonymous"></script>
 
   <!-- Lógica propia -->
-  <script src="js/scripts.js"></script>
+  <script src="assets/js/scripts.js"></script>
 </body>
 </html>
