--- a/instalaciones/laboratorios.html
+++ b/instalaciones/laboratorios.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet" />
 
   <!-- Bootstrap theme styles -->
-  <link href="css/styles.css" rel="stylesheet" />
+  <link href="../assets/css/styles.css" rel="stylesheet" />
 
   <!-- Pannellum (solo CSS aquí; JS abajo) -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
@@ -126,7 +126,7 @@
   <!-- ===== SCRIPTS ===== -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="../assets/js/scripts.js"></script>
 
   <script>
     // Crear el visor la primera vez que se muestre el modal
