Fix asset paths

--- a/instalaciones/laboratorios.html
+++ b/instalaciones/laboratorios.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Mecatrónica | Instalaciones</title>
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
 
   <!-- FontAwesome & Google Fonts -->
   <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -23,7 +23,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="assets/img/logos/new_meca_logo.png" alt="Mecatrónica" />
+        <img src="../assets/img/logos/new_meca_logo.png" alt="Mecatrónica" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu <i class="fas fa-bars ms-1"></i>
@@ -65,7 +65,7 @@
         <!-- Tarjeta 1 -->
         <div class="col-lg-4 col-sm-6 mb-4">
           <div class="card border-0 shadow">
-            <img src="assets/img/360_img/Taller_de_Prototipado_bg.jpg" class="card-img-top" alt="Taller de Prototipado">
+              <img src="../assets/img/360_img/Taller_de_Prototipado_bg.jpg" class="card-img-top" alt="Taller de Prototipado">
             <div class="card-body">
               <h5 class="card-title">Taller de Prototipado</h5>
               <p class="card-text small">Impresoras 3D de filamento y resina, cortadora láser y herramientas de prototipado rápido.</p>
@@ -77,7 +77,7 @@
         <!-- Tarjeta 2 -->
         <div class="col-lg-4 col-sm-6 mb-4">
           <div class="card border-0 shadow">
-            <img src="assets/img/instalaciones/robotica-thumb.jpg" class="card-img-top" alt="Labs de Electrónica">
+              <img src="../assets/img/instalaciones/robotica-thumb.jpg" class="card-img-top" alt="Labs de Electrónica">
             <div class="card-body">
               <h5 class="card-title">Labs de Electrónica</h5>
               <p class="card-text small">Osciloscopios, multímetros, estaciones de soldadura y mucho más material electrónico</p>
@@ -89,7 +89,7 @@
         <!-- Tarjeta 3 -->
         <div class="col-lg-4 col-sm-6 mb-4">
           <div class="card border-0 shadow">
-            <img src="assets/img/instalaciones/electronica-thumb.jpg" class="card-img-top" alt="Lab de Automatización">
+              <img src="../assets/img/instalaciones/electronica-thumb.jpg" class="card-img-top" alt="Lab de Automatización">
             <div class="card-body">
               <h5 class="card-title">Lab de Automatización</h5>
               <p class="card-text small">Brazos colaborativos, estaciones de control con módulos de neumática y eléctrica.</p>
@@ -137,7 +137,7 @@
       if (!protoViewer) {
         protoViewer = pannellum.viewer('viewerProto', {
           type: 'equirectangular',
-          panorama: 'assets/img/360_img/Taller_de_Prototipado.jpg',
+          panorama: '../assets/img/360_img/Taller_de_Prototipado.jpg',
           autoLoad: true,
           hfov: 100,
           yaw: 90,
