--- a/vida_universitaria/logros_estudiantiles.html
+++ b/vida_universitaria/logros_estudiantiles.html
@@ -131,7 +131,7 @@
   </section>
 
   <!-- Incluye el script después de Bootstrap -->
-  <script src="assets/js/logros.js"></script>
+  <script src="../assets/js/logros.js"></script>
 
 
 
