--- a/pages/admisiones.html
+++ b/pages/admisiones.html
@@ -23,7 +23,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top" id="mainNav">
     <div class="container-fluid px-lg-4">
-      <a class="navbar-brand" href="../index.html">
+      <a class="navbar-brand" href="index.html">
         <img src="../assets/img/logos/new_meca_logo.png" alt="Mecatrónica IBERO">
       </a>
 
@@ -37,7 +37,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ms-auto">
 
-          <li class="nav-item"><a class="nav-link fw-bold" href="../admisiones.html">Admisiones</a></li>
+          <li class="nav-item"><a class="nav-link fw-bold" href="admisiones.html">Admisiones</a></li>
 
           <li class="nav-item dropdown">
             <a class="nav-link fw-bold dropdown-toggle" href="#" id="vidaDropdown"
@@ -45,10 +45,10 @@
               Vida universitaria
             </a>
             <ul class="dropdown-menu" aria-labelledby="vidaDropdown">
-              <li><a class="dropdown-item" href="../vida_universitaria/plan_estudios.html">Plan de estudios</a></li>
-              <li><a class="dropdown-item" href="../vida_universitaria/grupos_estudiantiles.html">Grupos estudiantiles</a></li>
-              <li><a class="dropdown-item" href="../vida_universitaria/sociedad_alumnos.html">Sociedad de alumnos</a></li>
-              <li><a class="dropdown-item" href="../vida_universitaria/logros_estudiantiles.html">Logros estudiantiles</a></li>
+              <li><a class="dropdown-item" href="vida_universitaria/plan_estudios.html">Plan de estudios</a></li>
+              <li><a class="dropdown-item" href="vida_universitaria/grupos_estudiantiles.html">Grupos estudiantiles</a></li>
+              <li><a class="dropdown-item" href="vida_universitaria/sociedad_alumnos.html">Sociedad de alumnos</a></li>
+              <li><a class="dropdown-item" href="vida_universitaria/logros_estudiantiles.html">Logros estudiantiles</a></li>
             </ul>
           </li>
 
@@ -58,10 +58,10 @@
               Academia e investigación
             </a>
             <ul class="dropdown-menu" aria-labelledby="academiaDropdown">
-              <li><a class="dropdown-item" href="../academia/academicos.html">Académicos</a></li>
-              <li><a class="dropdown-item" href="../academia/proyectos_investigacion.html">Proyectos · investigación</a></li>
-              <li><a class="dropdown-item" href="../academia/publicaciones.html">Publicaciones</a></li>
-              <li><a class="dropdown-item" href="../academia/logros.html">Logros</a></li>
+              <li><a class="dropdown-item" href="academia/academicos.html">Académicos</a></li>
+              <li><a class="dropdown-item" href="academia/proyectos_investigacion.html">Proyectos · investigación</a></li>
+              <li><a class="dropdown-item" href="academia/publicaciones.html">Publicaciones</a></li>
+              <li><a class="dropdown-item" href="academia/logros.html">Logros</a></li>
             </ul>
           </li>
 
@@ -71,13 +71,13 @@
               Instalaciones
             </a>
             <ul class="dropdown-menu" aria-labelledby="instalacionesDropdown">
-              <li><a class="dropdown-item" href="../instalaciones/laboratorios.html">Laboratorios</a></li>
-              <li><a class="dropdown-item" href="../instalaciones/equipo.html">Equipo</a></li>
-              <li><a class="dropdown-item" href="../instalaciones/reglamentos.html">Reglamentos</a></li>
+              <li><a class="dropdown-item" href="instalaciones/laboratorios.html">Laboratorios</a></li>
+              <li><a class="dropdown-item" href="instalaciones/equipo.html">Equipo</a></li>
+              <li><a class="dropdown-item" href="instalaciones/reglamentos.html">Reglamentos</a></li>
             </ul>
           </li>
 
-          <li class="nav-item"><a class="nav-link fw-bold" href="../empleabilidad.html">Empleabilidad</a></li>
+          <li class="nav-item"><a class="nav-link fw-bold" href="empleabilidad.html">Empleabilidad</a></li>
         </ul>
       </div>
     </div>
