--- a/pages/instalaciones/reglamentos.html
+++ b/pages/instalaciones/reglamentos.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <!-- Estilos propios -->
-  <link href="../css/styles.css" rel="stylesheet">
+  <link href="../../css/styles.css" rel="stylesheet">
 
 </head>
 
@@ -24,7 +24,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top" id="mainNav">
     <div class="container-fluid px-lg-4">
       <a class="navbar-brand" href="../index.html">
-        <img src="../assets/img/logos/new_meca_logo.png" alt="Mecatrónica IBERO">
+        <img src="../../assets/img/logos/new_meca_logo.png" alt="Mecatrónica IBERO">
       </a>
 
       <button class="navbar-toggler" type="button"
@@ -92,6 +92,6 @@
     crossorigin="anonymous"></script>
 
   <!-- Lógica propia -->
-  <script src="../js/scripts.js"></script>
+  <script src="../../js/scripts.js"></script>
 </body>
 </html>
