--- a/pages/vida_universitaria/plan_estudios.html
+++ b/pages/vida_universitaria/plan_estudios.html
@@ -17,7 +17,7 @@
         rel="stylesheet">
 
   <!-- Estilos globales -->
-  <link href="../css/styles.css" rel="stylesheet">
+  <link href="../../css/styles.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -25,7 +25,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top" id="mainNav">
     <div class="container-fluid px-lg-4">
       <a class="navbar-brand" href="../index.html">
-        <img src="../assets/img/logos/new_meca_logo.png" alt="Mecatrónica IBERO">
+        <img src="../../assets/img/logos/new_meca_logo.png" alt="Mecatrónica IBERO">
       </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -135,10 +135,10 @@
 
       <!-- Descargas -->
       <div class="d-flex justify-content-center gap-3 flex-wrap my-4">
-        <a href="../assets/pdf/Folleto_MEC.pdf" class="btn btn-danger">
+        <a href="../../assets/pdf/Folleto_MEC.pdf" class="btn btn-danger">
           <i class="bi bi-download me-2"></i>Folleto de la carrera
         </a>
-        <a href="../assets/pdf/Optativas_AOC.pdf" class="btn btn-danger">
+        <a href="../../assets/pdf/Optativas_AOC.pdf" class="btn btn-danger">
           <i class="bi bi-download me-2"></i>Optativas AOC
         </a>
       </div>
@@ -172,6 +172,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
           crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios@1.6.5/dist/axios.min.js"></script>
-  <script src="../js/scripts.js"></script> <!-- tu archivo principal -->
+  <script src="../../js/scripts.js"></script> <!-- tu archivo principal -->
 </body>
 </html>
