Move CSS and JS into assets folder

--- a/pages/vida_universitaria/logros_estudiantiles.html
+++ b/pages/vida_universitaria/logros_estudiantiles.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <!-- Estilos propios -->
-  <link href="../../css/styles.css" rel="stylesheet">
+  <link href="../../assets/styles.css" rel="stylesheet">
 
 </head>
 
@@ -142,6 +142,6 @@
     crossorigin="anonymous"></script>
 
   <!-- Lógica propia -->
-  <script src="../../js/scripts.js"></script>
+  <script src="../../assets/scripts.js"></script>
 </body>
 </html>
