--- a/pages/index.html
+++ b/pages/index.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <!-- Estilos propios -->
-  <link href="../css/styles.css" rel="stylesheet">
+  <link href="../assets/styles.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -156,6 +156,6 @@
     crossorigin="anonymous"></script>
 
   <!-- Lógica propia -->
-  <script src="../js/scripts.js"></script>
+  <script src="../assets/scripts.js"></script>
 </body>
 </html>
