--- a/pages/vida_universitaria/plan_estudios.html
+++ b/pages/vida_universitaria/plan_estudios.html
@@ -17,7 +17,7 @@
         rel="stylesheet">
 
   <!-- Estilos globales -->
-  <link href="../../css/styles.css" rel="stylesheet">
+  <link href="../../assets/styles.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -172,6 +172,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
           crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios@1.6.5/dist/axios.min.js"></script>
-  <script src="../../js/scripts.js"></script> <!-- tu archivo principal -->
+  <script src="../../assets/scripts.js"></script> <!-- tu archivo principal -->
 </body>
 </html>
